# Solana-AMM

./: README.md
amm/: Anchor.toml  README.md  package-lock.json  package.json
amm/anchor/: Anchor.toml
amm/anchor/programs/amm/: Cargo.toml
amm/anchor/programs/amm/src/: error.rs  lib.rs  state.rs
amm/anchor/programs/amm/src/instructions/: init_pool.rs  liquidity.rs  swap.rs
amm/anchor/src/: amm-exports.ts  index.ts
amm/anchor/tests/: amm.spec.ts
amm/programs/amm/: Cargo.toml
amm/programs/amm/src/: error.rs  lib.rs  state.rs
amm/programs/amm/src/instructions/: add_liquidity.rs  initialize_pool.rs  mod.rs  remove_liquidity.rs  shared.rs  swap.rs
amm/src/app/: layout.tsx
amm/src/app/amm/: page.tsx
amm/src/components/amm/: amm-data-access.tsx  amm-feature.tsx  amm-ui.tsx
amm/src/components/ui/: ui-layout.tsx
amm/tests/: amm.ts
contracts/: Anchor.toml
contracts/programs/contracts/src/: errors.rs  lib.rs  state.rs
contracts/programs/contracts/src/instructions/: create_amm.rs  create_pool.rs  init_pool.rs  mod.rs
contracts/programs/contracts/src/state/: errors.rs  mod.rs  state.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.tsx
frontend/src/components/: add-liquidity.tsx  create-pool.tsx  navbar.tsx  pools.tsx  remove-liquidity.tsx  swap.tsx
frontend/src/services/: contract-service.ts
frontend/src/utils/: constants.ts  idl.json  idltype.ts  useProgram.tsx
